# controllers/Users.js
@@ -4,28 +4,13 @@ var utils = require('../utils/writer.js');
 var { getError } = require('../utils/error');
 var Users = require('../service/UsersService');
 
-// module.exports.createCase = function createCase(c, req, res) {
-//   var base64 = c.request.headers.authorization.replace(/Bearer /, '').split('.')[1];
-//   var buffer = new Buffer.from(base64, 'base64');
-//   var decodedToken = buffer.toString('ascii'); // TODO : récupérer la valeur de l'utilisateur connecté
-//   var userLogged = decodedToken;
-//   var body = c.request.body;
-//   if (body.customerA == null || body.customerA == undefined || body.customerA.contactEmail == null || body.customerA.contactEmail == undefined || body.customerA.contactTel == null || body.customerA.contactTel == undefined || body.customerB == null || body.customerB == undefined || body.customerB.contactEmail == null || body.customerB.contactEmail == undefined || body.customerB.contactTel == null || body.customerB.contactTel == undefined) {
-//     getError(res, 'Bad request');
-//   } else {
-//     Cases.createCase(userLogged, body) // TODO : userLogged
-//       .then(function (response) {
-//         utils.writeJson(res, response, 201);
-//       })
-//       .catch(function (response) {
-//         getError(res, response);
-//       });
-//   }
-// };
-
 module.exports.getUser = function getUser(c, req, res) {
   if (!c.request.params.userID) return getError(res, 'Bad request');
   else var userID = c.request.params.userID;
+  // var base64 = c.request.headers.authorization.replace(/Bearer /, '').split('.')[1];
+  // var buffer = new Buffer.from(base64, 'base64');
+  // var decodedToken = JSON.parse(buffer.toString('ascii'));
+  // if (decodedToken.role == 'Employee') if (userID != decodedToken.id) return getError(res, 'Unauthorized');
   Users.getUser(userID)
     .then(function (response) {
       utils.writeJson(res, response, 200);
@@ -52,11 +37,12 @@ module.exports.getUsers = function getUsers(c, req, res) {
 
 module.exports.createUser = function createUser(c, req, res) {
   var params = {};
-  if (!c.request.body.username || !c.request.body.email) return getError(res, 'Bad request');
-
+  if (!c.request.body.username || !c.request.body.email || !c.request.body.password || !c.request.body.role) return getError(res, 'Bad request');
   // TODO : ajouter champs
   if (c.request.body.username) params.username = c.request.body.username;
   if (c.request.body.email) params.email = c.request.body.email;
+  if (c.request.body.password) params.password = c.request.body.password;
+  if (c.request.body.role) params.role = c.request.body.role;
 
   if (!params.email.match(/^[\w-]+@[\w-]+\.[\w]+$/g)) return getError(res, 'Bad request');
 
@@ -77,7 +63,7 @@ module.exports.updateUser = function updateUser(c, req, res) {
 
   if (c.request.body) var params = c.request.body;
   if (params.email && !c.request.body.email.match(/^[\w-]+@[\w-]+\.[\w]+$/g)) return getError(res, 'Bad request');
-  
+
   Users.updateUser(userID, params)
     .then(function (response) {
       utils.writeJson(res, response, 201);
@@ -93,65 +79,9 @@ module.exports.deleteUser = function deleteUser(c, req, res) {
 
   Users.deleteUser(userID)
     .then(function (response) {
-      utils.writeJson(res, response, 204);
+      utils.writeJson(res, response, 200);
     })
     .catch(function (response) {
       getError(res, response);
     });
 };
-
-// module.exports.getCustomers = function getCustomers(c, req, res) {
-//   var idCase = c.request.params.idCase;
-//   if (!idCase) return getError(res, 'Bad request');
-//   Customers.getCustomers(idCase)
-//     .then(function (response) {
-//       utils.writeJson(res, response, 200);
-//     })
-//     .catch(function (response) {
-//       getError(res, response);
-//     });
-// };
-
-// module.exports.updateCustomer = function updateCustomer(c, req, res) {
-//   var idCustomer = c.request.params.idCustomer;
-//   var body = c.request.body;
-//   Customers.updateCustomer(idCustomer, body)
-//     .then(function (response) {
-//       utils.writeJson(res, response, 201);
-//     })
-//     .catch(function (response) {
-//       getError(res, response);
-//     });
-// };
-
-// module.exports.getProgressReport = function getProgressReport(c, req, res) {
-//   var idCase = parseInt(c.request.params.idCase);
-//   if (!idCase || typeof idCase !== 'number') return getError(res, 'Bad request');
-//   Cases.getProgressReport(idCase)
-//     .then(function (response) {
-//       utils.writeJson(res, response, 200);
-//     })
-//     .catch(function (response) {
-//       getError(res, response);
-//     });
-// };
-
-// module.exports.getCasePDF = function getCasePDF(c, req, res) {
-//   Cases.getCasePDF()
-//     .then(function (response) {
-//       utils.writeJson(res, response, 200);
-//     })
-//     .catch(function (response) {
-//       getError(res, response);
-//     });
-// };
-
-// module.exports.getApporteurs = function getApporteurs(c, req, res) {
-//   Cases.getApporteurs()
-//     .then(function (response) {
-//       utils.writeJson(res, response, 201);
-//     })
-//     .catch(function (response) {
-//       getError(res, response);
-//     });
-// };
